# EC-AVtransfer

./: AUDIO_GUIDE.md  CMakeLists.txt  HOW_TO_CHANGE_VIDEO.md  QT_CLIENT_GUIDE.md  README.md  build.sh  convert_video.sh  stream.sdp  test_audio.sh  test_audio_formats.sh  test_gui.sh
client/: CMakeLists.txt  README.md  rtsp_client  rtsp_client.cpp  rtsp_client_gui  rtsp_client_gui.cpp
client/qt_client/: asrworker.cpp  asrworker.h  audiovisualizer.cpp  audiovisualizer.h  mainwindow.cpp  mainwindow.h  qt_learn.md  videothread.cpp  videothread.h
example/: test.opus
